# Brownfield-cartographer

./: .gitignore  README.md  RECONNAISSANCE.md  architecture-diagram.mmd  debug_synthesis.py  list_models_v2.py  pyproject.toml
.cartography_final/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md  semantic_index.json
.cartography_refined/: CODEBASE.md  cartography_trace.jsonl  lineage_graph.json  module_graph.json  onboarding_brief.md
src/: cli.py  orchestrator.py
src/agents/: archivist.py  factory.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  sql_lineage.py  tree_sitter_analyzer.py  universal_analyzer.py
src/graph/: knowledge_graph.py
src/models/: nodes.py
src/utils/: git_utils.py  llm_budget.py
